--- a/src/app/sections/about/about.component.html
+++ b/src/app/sections/about/about.component.html
@@ -13,21 +13,17 @@
 
         <!-- Social Media -->
         <div class="mh-social-icons">
-          <a href="https://facebook.com/username" target="_blank" class="social-icon">
+          <a href="https://facebook.com/galibwow" target="_blank" class="social-icon">
             <i class="fab fa-facebook-f"></i>
           </a>
-          <a href="https://twitter.com/username" target="_blank" class="social-icon">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="https://github.com/username" target="_blank" class="social-icon">
+          
+          <a href="https://github.com/rakibgalib" target="_blank" class="social-icon">
             <i class="fab fa-github"></i>
           </a>
-          <a href="https://linkedin.com/in/galibwow" target="_blank" class="social-icon">
+          <a href="https://linkedin.com/in/rakibhossaingalib" target="_blank" class="social-icon">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="https://dribbble.com/username" target="_blank" class="social-icon">
-            <i class="fab fa-dribbble"></i>
-          </a>
+          
         </div>
       </div>
 
