--- a/src/app/sections/header/header.component.html
+++ b/src/app/sections/header/header.component.html
@@ -10,22 +10,22 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav mr-auto ml-auto">
                                 <li class="nav-item active">
-                                    <a class="nav-link" routerLink="/home">Home</a>
+                                    <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" routerLink="/about">About</a>
+                                    <a class="nav-link" routerLink="/about" routerLinkActive="active">About</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" routerLink="/skills">Skills</a>
+                                    <a class="nav-link" routerLink="/skills" routerLinkActive="active">Skills</a>
                                 </li>                                
                                 <li class="nav-item">
-                                   <a class="nav-link" href="/experience">Experiences</a>
+                                   <a class="nav-link" routerLink="/experience" routerLinkActive="active">Experiences</a>
                                 </li>                                
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/portfolio">Portfolio</a>
+                                    <a class="nav-link" routerLink="/portfolio" routerLinkActive="active">Portfolio</a>
                                 </li>                               
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/education">Education</a>
+                                    <a class="nav-link" routerLink="/education" routerLinkActive="active">Education</a>
                                 </li>
                           
                             </ul>
